--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Career Portfolio | Bia Zidioti</title>
+    <title>Career Portfolio | Bia Zidiotit</title>
 </head>
 <body>
-    <h1> Bia Zidioti  </h1>
+    <h1> Bia Zidioti </h1>
     <!-- 
     - Seu nome completo;
     - Uma foto atual sua, acompanhada de um texto alternativo, que deve ser a descrição da foto que você está usando;
